@@ -25,11 +25,30 @@
 package com.oracle.svm.test;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Set;
+import java.util.TreeSet;
+import java.util.stream.Collectors;
 
 import org.junit.Assert;
 import org.junit.Test;
 
+@NativeImageBuildArgs({
+                "-H:+UnlockExperimentalVMOptions",
+                "-H:+ClassForNameRespectsClassLoader",
+                "--add-modules=java.sql"
+})
 public class GetPackageTest {
+    /**
+     * Identifies a platform-loader module that keeps a non-boot module package available.
+     */
+    private static final String PLATFORM_MODULE_NAME = "java.sql";
+
+    /**
+     * Identifies a package defined by {@link #PLATFORM_MODULE_NAME}.
+     */
+    private static final String PLATFORM_MODULE_PACKAGE_NAME = "java.sql";
+
     /**
      * Checks that class package metadata is available for an included JDK class.
      */
@@ -49,7 +68,88 @@ public class GetPackageTest {
     @Test
     public void testGetDefinedPackage() {
         Assert.assertNotNull(Package.getPackage("java.lang"));
+        assertNonBootModulePackageNotDefinedByBootLoader();
         Assert.assertNull(Package.getPackage(""));
         Assert.assertNull(Package.getPackage("com.oracle.svm.test.package.does.not.exist"));
+    }
+
+    /**
+     * Checks that package enumeration follows the boot loader's defined packages.
+     */
+    @Test
+    public void testGetPackages() {
+        assertPackageVisibleToGetPackages("java.lang");
+        assertUnmaterializedBootModulePackageNotVisible();
+    }
+
+    /// Checks that the global JDK package table does not make platform-module packages look like
+    /// packages defined to the boot loader.
+    @SuppressWarnings("deprecation")
+    private static void assertNonBootModulePackageNotDefinedByBootLoader() {
+        String packageName = findPlatformModulePackageNotDefinedToPlatformLoader();
+        Assert.assertNull(Package.getPackage(packageName));
+    }
+
+    /// Finds a platform module package that can only be returned if boot lookup claims it.
+    private static String findPlatformModulePackageNotDefinedToPlatformLoader() {
+        ClassLoader platformClassLoader = ClassLoader.getPlatformClassLoader();
+        Module platformModule = ModuleLayer.boot().findModule(PLATFORM_MODULE_NAME).orElseThrow(() -> new AssertionError("Missing module " + PLATFORM_MODULE_NAME));
+        Assert.assertSame(platformClassLoader, platformModule.getClassLoader());
+        Assert.assertTrue(platformModule.getPackages().contains(PLATFORM_MODULE_PACKAGE_NAME));
+        if (platformClassLoader.getDefinedPackage(PLATFORM_MODULE_PACKAGE_NAME) == null) {
+            return PLATFORM_MODULE_PACKAGE_NAME;
+        }
+        return ModuleLayer.boot().modules().stream()
+                        .filter(GetPackageTest::isSystemModule)
+                        .filter(module -> module.getClassLoader() == platformClassLoader)
+                        .flatMap(module -> module.getPackages().stream())
+                        .filter(packageName -> !packageName.isEmpty())
+                        .filter(packageName -> platformClassLoader.getDefinedPackage(packageName) == null)
+                        .findFirst()
+                        .orElseThrow(() -> new AssertionError("No unmaterialized platform module package could be checked"));
+    }
+
+    /// Checks that a boot module descriptor package does not become visible before it is defined.
+    @SuppressWarnings("deprecation")
+    private static void assertUnmaterializedBootModulePackageNotVisible() {
+        String packageName = findUnmaterializedBootModulePackage();
+        Assert.assertFalse(visiblePackageNames().contains(packageName));
+        Assert.assertNull(Package.getPackage(packageName));
+    }
+
+    /// Finds a boot module package that has not been defined to the boot loader.
+    private static String findUnmaterializedBootModulePackage() {
+        Set<String> unmaterializedBootPackages = new TreeSet<>(bootModulePackages());
+        unmaterializedBootPackages.removeAll(visiblePackageNames());
+        Assert.assertFalse("No unmaterialized boot module package could be checked", unmaterializedBootPackages.isEmpty());
+        return unmaterializedBootPackages.iterator().next();
+    }
+
+    /// Verifies that package enumeration includes `packageName`.
+    private static void assertPackageVisibleToGetPackages(String packageName) {
+        Assert.assertTrue(visiblePackageNames().contains(packageName));
+    }
+
+    /// Returns package names listed by system modules owned by the boot loader.
+    private static Set<String> bootModulePackages() {
+        return ModuleLayer.boot().modules().stream()
+                        .filter(GetPackageTest::isSystemModule)
+                        .filter(module -> module.getClassLoader() == null)
+                        .flatMap(module -> module.getPackages().stream())
+                        .filter(packageName -> !packageName.isEmpty())
+                        .collect(Collectors.toSet());
+    }
+
+    /// Checks whether `module` is backed by a system module image entry.
+    private static boolean isSystemModule(Module module) {
+        return module.getLayer().configuration().findModule(module.getName())
+                        .flatMap(resolvedModule -> resolvedModule.reference().location())
+                        .map(location -> "jrt".equals(location.getScheme()))
+                        .orElse(false);
+    }
+
+    /// Returns package names visible to `Package.getPackages`.
+    private static Set<String> visiblePackageNames() {
+        return Arrays.stream(Package.getPackages()).map(Package::getName).collect(Collectors.toSet());
     }
 }
